<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:title="iNotes"
        app:titleTextColor="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <ImageView
            android:id="@+id/save"
            android:layout_width="50dp"
            android:layout_height="?attr/actionBarSize"
            android:src="@drawable/ic_baseline_save_24"
            android:layout_gravity="end"
            android:padding="4dp"
            android:contentDescription="@string/todo" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/fab_transformation_scrim_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/title"
                android:background="@drawable/addnotesdesign"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/editTextSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/subtitle"
                android:background="@drawable/addnotesdesign"
                android:gravity="start"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textSize="18sp"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                android:background="@drawable/addnotesdesign"
                android:hint="@string/description"
                android:gravity="top"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textSize="20sp"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_reminder_as_well"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/setDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setdate"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/setTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_time"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:textAlignment="center"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable"
                android:background="@drawable/addnotesdesign"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:padding="8dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>